[project]
name = "sysblokbot"
version = "0.1.0"
requires-python = "==3.8.*"
dependencies = [
    "beautifulsoup4==4.10.0",
    "cachetools==4.1.0",
    "cryptography==3.1.1",
    "deepdiff==4.3.2",
    "google-api-python-client==2.198.0",
    "grpcio==1.63.0",
    "nest-asyncio==1.6.0",
    "oauth2client==4.1.3",
    "opentelemetry-api==1.24.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.24.0",
    "opentelemetry-sdk==1.24.0",
    "python-dateutil==2.8.1",
    "python-telegram-bot==21.4",
    "pytz==2020.1",
    "requests==2.28.1",
    "schedule==1.2.2",
    "setuptools",
    "sheetfu==1.5.3",
    "SQLAlchemy==1.3.17",
    "telethon",
    "tenacity==9.0.0",
]

[tool.uv]
package = false

[tool.uv.sources]
telethon = { git = "https://github.com/alexeyqu/Telethon.git", rev = "7cd20d1e5c0082450c53dbf242fb35145e448260" }

[dependency-groups]
dev = [
    "freezegun==0.3.15",
    "pre-commit==2.21.0",
    "pytest==5.4.1",
    "pytest-asyncio==0.12.0",
    "ruff==0.11.2",
]
